adler-core/tests/snapshots/json_contracts__avatar_hash_identity_cluster_json_contract.snap
---
source: adler-core/tests/json_contracts.rs
expression: pretty_json(&clusters)
---
[
  {
    "id": "identity-0001",
    "members": [
      {
        "site": "Mastodon",
        "username": "alice",
        "url": "https://mastodon.example/@alice",
        "evidence": [
          {
            "kind": "avatar_hash",
            "field": "avatar_hash",
            "value": "dhash64_v1:0123456789abcdef",
            "source": {
              "site": "Mastodon",
              "url": "https://mastodon.example/@alice",
              "origin": "derived",
              "observed_at_ms": 1781192451000,
              "access_path": {
                "transport": "http"
              }
            }
          },
          {
            "kind": "location",
            "field": "location",
            "value": "Wonderland",
            "source": {
              "site": "Mastodon",
              "url": "https://mastodon.example/@alice",
              "origin": "extractor",
              "observed_at_ms": 1781192451000,
              "access_path": {
                "transport": "http"
              }
            }
          }
        ],
        "confidence": {
          "score": 85,
          "label": "high",
          "reasons": [
            {
              "kind": "found_by_signal"
            },
            {
              "kind": "signal_evidence",
              "count": 1
            },
            {
              "kind": "profile_metadata_extracted",
              "count": 1
            }
          ]
        },
        "observed_at_ms": 1781192451000
      },
      {
        "site": "Pixelfed",
        "username": "alice",
        "url": "https://pixelfed.example/alice",
        "evidence": [
          {
            "kind": "avatar_hash",
            "field": "avatar_hash",
            "value": "dhash64_v1:0123456789abcdef",
            "source": {
              "site": "Pixelfed",
              "url": "https://pixelfed.example/alice",
              "origin": "derived",
              "observed_at_ms": 1781192451000,
              "access_path": {
                "transport": "http"
              }
            }
          },
          {
            "kind": "location",
            "field": "location",
            "value": "Wonderland",
            "source": {
              "site": "Pixelfed",
              "url": "https://pixelfed.example/alice",
              "origin": "extractor",
              "observed_at_ms": 1781192451000,
              "access_path": {
                "transport": "http"
              }
            }
          }
        ],
        "confidence": {
          "score": 85,
          "label": "high",
          "reasons": [
            {
              "kind": "found_by_signal"
            },
            {
              "kind": "signal_evidence",
              "count": 1
            },
            {
              "kind": "profile_metadata_extracted",
              "count": 1
            }
          ]
        },
        "observed_at_ms": 1781192451000
      }
    ],
    "confidence": 90,
    "reasons": [
      {
        "kind": "shared_location",
        "value": "wonderland"
      },
      {
        "kind": "shared_avatar_hash",
        "value": "dhash64_v1:0123456789abcdef"
      }
    ],
    "uncertain": true
  }
]
